# tma4280

./: .gitignore
poisson/: CMakeLists.txt  Untitled 1.ods  common.c  jobscript  poisson-diag-fst.c  poisson.c  poisson2.c  poisson3.c  poisson4.c  poissonMPI.c  testscript
poisson/Report/: .tex  aref.bib  document.aux  document.bbl  document.blg  document.out  document.tex  document.toc
poisson/Report/graphs/: 55.aux  error.aux  error.gp  error.tex  frontpage.aux  frontpage.tex  out0.aux  out0.tex  peff.aux  peff.gp  peff.tex  solution1.aux  solution1.gp  solution1.tex  solution2.aux  solution2.gp  solution2.tex  solution3.aux  solution3.tex  solution4.aux  solution4.tex  time1.aux  time1.gp  time1.tex  timing_MPI.aux  timing_MPI.gp  timing_MPI.tex  timing_single_node.aux  timing_single_node.gp  timing_single_node.tex
poisson/example/: CMakeLists.txt  job.sh
vecsum/: CMakeLists.txt  CMakeLists.txt~  jobscript  jobscript.txt  parallel-mpi.c  parallel-mpi.c~  parallel-omp.c  serial.c
vecsum/report/: .texlipse  document.aux  document.dvi  document.ps  document.tex
